# pybind11-protobuf-minimal-starter

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  example.proto  helloworld.h  helloworld_py_test.py  helloworld_pybind.cpp
