load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

proto_library(
    name = "example_proto",
    srcs = ["example.proto"],
    deps = [
        "@protobuf//:duration_proto",
    ],
)

cc_proto_library(
    name = "example_cc_proto",
    deps = [
        ":example_proto",
    ],
)

py_proto_library(
    name = "example_py_proto",
    deps = [":example_proto"],
)

cc_library(
    name = "helloworld",
    hdrs = ["helloworld.h"],
    deps = [
        ":example_cc_proto",
    ],
)

pybind_extension(
    name = "helloworld_pybind",
    srcs = ["helloworld_pybind.cpp"],
    deps = [
        ":example_cc_proto",
        ":helloworld",
        "@pybind11_protobuf//pybind11_protobuf:native_proto_caster",
    ],
)

py_test(
    name = "helloworld_py_test",
    srcs = ["helloworld_py_test.py"],
    python_version = "3.12",
    deps = [
        "//:example_py_proto",
        "//:helloworld_pybind.so",
        "@protobuf//:protobuf_python",  # Required for any python targets using pybind
    ],
)
